# radriloniuma-mcp

./: .gitignore  DECOMMISSIONED.md  README.md  adal-radriloniuma.md  pyproject.toml
.adal/: session_notes.md
devkit/: fix_python_escapes.py  fix_python_escapes.sh
docs/protocols/: CHRONO_RESONANCE_PROTOCOL_V1.md  GEMINI_CLI_INTEGRATION_V1.md  MCP_GATEWAY_PROTOCOL_V1.md
src/radriloniuma_mcp/: __init__.py  __main__.py  executor.py  filesystem.py  gateway.py  protocols.py  search.py
tests/: __init__.py  test_executor.py  test_filesystem.py  test_gateway.py  test_protocols.py  test_search.py
